@@ -1,3 +1,6 @@
+Upcoming:
+- It's now possible to toggle between different worldstyles in the Lost Cities world creation screen
+
 1.18-5.3.3:
 - Multibuildings can now be any size with a maximum of 3x3. So 1x2, 2x3, 2x2, ...
 - New type of 'scattered' buildings. These are 1x1 or multi buildings that will generate randomly outside cities
